# ComfyUI-AnimateDiff-Evolved

./: .gitignore  LICENSE  README.md  __init__.py  ade_config.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
animatediff/: ad_settings.py  adapter_cameractrl.py  adapter_fancyvideo.py  adapter_hellomeme.py  adapter_motionctrl.py  adapter_pia.py  animatelcm_i2v_adapter.py  attention_processor.py  camera_utils.py  cfg_extras.py  conditioning.py  context.py  context_extras.py  dinklink.py  documentation.py  freeinit.py  logger.py  model_injection.py  model_utils.py  motion_lora.py  motion_module.py  motion_module_ad.py  motion_module_adapter.py  motion_module_adxl.py  motion_module_hsxl.py  motion_utils.py  nodes.py  nodes_ad_settings.py  nodes_animatelcmi2v.py  nodes_cameractrl.py  nodes_conditioning.py  nodes_context.py  nodes_context_extras.py  nodes_deprecated.py  nodes_experimental.py  nodes_extras.py  nodes_fancyvideo.py  nodes_gen1.py  nodes_gen2.py  nodes_hellomeme.py  (+17 more)
documentation/nodes/: README.md
documentation/samples/: README.md
examples/: README.md
video_formats/: av1-webm.json  h264-mp4.json  h265-mp4.json  webm.json
web/js/: autosize.js  deprecate_nodes.js  documentation.js  gif_preview.js  videoinfo.js
