[project]
name = "comfyui-animatediff-evolved"
description = "Improved AnimateDiff integration for ComfyUI."
version = "1.5.6"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Kosinkadink/ComfyUI-AnimateDiff-Evolved"

#  Used by Comfy Registry https://comfyregistry.org
[tool.comfy]
PublisherId = "kosinkadink"
DisplayName = "ComfyUI-AnimateDiff-Evolved"
Icon = ""
